# esrs_lc_rag

./: .gitignore  .pre-commit-config.yaml  README.md  blob_translation_easy_NMT.py  main.py  main.yaml  pyproject.toml  requirements.txt  viper_config.yaml  viper_parser.py
annotations/: .nfs0000000788fe04280000cc97  collect_api_data.py  data_model.py  main.py  viper_parser.py
annotations_utils/: collect_api_data.py  data_model.py  fluidml_helper.py
data/srn_raw_json/: 1eed85a5-b8fe-4403-9e24-f16231daad8e.json  1eed85a5-b8fe-4403-9e24-f16231daad8e_processed.json  3023e67b-bfb2-4886-bcfb-7650c1e6b024.json  3023e67b-bfb2-4886-bcfb-7650c1e6b024_processed.json  864f83e0-41d4-4784-899e-1d1212c45371.json  864f83e0-41d4-4784-899e-1d1212c45371_processed.json  a66b0483-d22c-4d26-aa1b-0fd6d0a2246a.json  a66b0483-d22c-4d26-aa1b-0fd6d0a2246a_processed.json  da2f58d1-0613-4bf1-8009-0a4263928647.json  da2f58d1-0613-4bf1-8009-0a4263928647_processed.json
data/srn_recommendations/: 1eed85a5-b8fe-4403-9e24-f16231daad8e.json  3023e67b-bfb2-4886-bcfb-7650c1e6b024.json  a66b0483-d22c-4d26-aa1b-0fd6d0a2246a.json  da2f58d1-0613-4bf1-8009-0a4263928647.json
parse_esrs_requirements/: scrape_esrs1_2.py
srn_data_collector/: .gitignore  blob_translation.py  main.py  main.yaml  system.prompt  test_viper.py  viper_config.yaml  viper_parser.py
srn_data_collector/annotations_utils/: collect_api_data.py  data_model.py  llm_utils_helper.py  logger_setup.py  viper_parser_old.py
srn_data_collector/data-analysis/: analysis_script.py  data-analysis.ipynb  fine_tune.ipynb  fine_tune_en-de_task.ipynb  langchain_tuts.ipynb  rag_langchain.ipynb  sample.json  st_visualizer.py
srn_scrape/: re-download_broken_files.py  srn_scraping.py
(+131 files in other folders)
